# Face_DAI_LINUX

./: README.md
FaceAlignment/: CMakeLists.txt  README.md
FaceAlignment/src/: cfan.cpp
FaceAlignment/src/test/: face_alignment_test.cpp
FaceDetection/: CMakeLists.txt  README.md
FaceDetection/include/util/: math_func.h
FaceIdentification/: CMakeLists.txt
FaceIdentification/include/: face_rec.h  libabc.h
FaceIdentification/src/: CMakeLists.txt  math_functions.cpp
FaceIdentification/src/api/: CMakeLists.txt  demo.cpp  demo2.cpp  face_rec.cpp
FaceIdentification/src/test/: CMakeLists.txt  demo.cpp  face_rec.cpp  facerecognize.cpp  test_face_recognizer.cpp  test_face_verification.cpp
FaceIdentification/src/test/old/: facerecognize.cpp  funset.cpp  test_face_recognizer.cpp  test_face_verification.cpp
